--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             $('#dateInput').daterangepicker({
                 //最大时间
                 maxDate: moment().subtract(1, 'days'),
-                startDate: moment().subtract(90, 'days'),
+                startDate: moment().subtract(30, 'days'),
                 endDate: moment().subtract(1, 'days'),
                 locale: {
                     format: 'YYYY/MM/DD'
@@ -46,7 +46,7 @@
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body class="vip-change">
-<div class="loading-wrapper" style="display: block;">
+<div class="loading-wrapper" id="loading1" style="display: block;">
     <div class="spinner"></div>
 </div>
 <!--头部 开始-->
