--- a/dff.html
+++ b/dff.html
@@ -8,19 +8,12 @@
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Title</title>
-    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src=""></script>
 </head>
 <body>
 <script>
-    var a = {
-        list:{
-            ddd:["fdf","dd"],
-            da:"df"
-        }
-    }
-    var b = JSON.stringify(a.list);
-    console.log(b);
-    console.log(a)
+    var daa=new Date("2017","0","29");
+    console.log(daa.getDate())
 </script>
 </body>
 </html>
