--- a/productSell.html
+++ b/productSell.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>giant数据|QRcode数据</title>
+    <title>giant数据|产品QRcode数据</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/daterangepicker.css"/>
     <link rel="stylesheet" href="css/zTreeStyle.css">
@@ -31,11 +31,8 @@
             var dateOption = {
                 //最大时间
                 maxDate: moment().subtract(1, 'days'),
-                startDate: moment().subtract(90, 'days'),
+                startDate: moment().subtract(30, 'days'),
                 endDate: moment().subtract(1, 'days'),
-                dateLimit:{
-                    month:"3"
-                },
                 locale: {
                     format: 'YYYY/MM/DD'
                 },
@@ -46,14 +43,17 @@
                 }
             };
             //时间选择
-            $('#dateInput1').daterangepicker(dateOption);
+            $('#dateInput1').daterangepicker($.extend({},dateOption,{dateLimit:{month:"3"}}));
             $('#dateInput2').daterangepicker(dateOption);
         })
     </script>
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body class="vip-change">
-<div class="loading-wrapper" style="display: block;">
+<div class="loading-wrapper" id="loading1" style="display: block;">
+    <div class="spinner"></div>
+</div>
+<div class="loading-wrapper" id="loading2" style="display: block;">
     <div class="spinner"></div>
 </div>
 <!--头部 开始-->
@@ -187,28 +187,21 @@
                     <p>昨日关键指标</p>
                 </div>
                 <div class="row block-content" id="quotaBox">
-                    <div class="col-md-3 col-sm-3 col-xs-6 block-one">
+                    <div class="col-md-4 col-sm-4 col-xs-6 block-one">
                         <p class="header-title">销售总金额</p>
                         <p class="header-title big-number"></p>
                         <p class="header-title">日 <span class="arrow"></span><span class="count"></span></p>
                         <p class="header-title">周 <span class="arrow"></span><span class="count"></span></p>
                         <p class="header-title">月 <span class="arrow"></span><span class="count"></span></p>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 block-one">
-                        <p class="header-title">销售产品总数</p>
-                        <p class="header-title big-number"></p>
-                        <p class="header-title">日 <span class="arrow"></span><span class="count"></span></p>
-                        <p class="header-title">周 <span class="arrow"></span><span class="count"></span></p>
-                        <p class="header-title">月 <span class="arrow"></span><span class="count"></span></p>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 block-one">
+                    <div class="col-md-4 col-sm-4 col-xs-6 block-one">
                         <p class="header-title">整车销量</p>
                         <p class="header-title big-number"></p>
                         <p class="header-title">日 <span class="arrow"></span><span class="count"></span></p>
                         <p class="header-title">周 <span class="arrow"></span><span class="count"></span></p>
                         <p class="header-title">月 <span class="arrow"></span><span class="count"></span></p>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6 block-one">
+                    <div class="col-md-4 col-sm-4 col-xs-6 block-one">
                         <p class="header-title">商品销量</p>
                         <p class="header-title big-number"></p>
                         <p class="header-title">日 <span class="arrow"></span><span class="count"></span></p>
@@ -220,7 +213,7 @@
             <!--数据表-->
             <div class="row data-charts block">
                 <div class="block-title">
-                    <p>会员数据</p>
+                    <p>产品数据</p>
                 </div>
                 <div class="col-md-12">
                     <!--查询条件-->
@@ -228,7 +221,6 @@
                         <div class="col-md-8 col-sm-8">
                             <div class="btn-group" id="vipClass">
                                 <div class="btn btn-primary">销售总金额</div>
-                                <div class="btn btn-default">销售产品总数</div>
                                 <div class="btn btn-default">整车销售</div>
                                 <div class="btn btn-default">商品销售</div>
                             </div>
@@ -281,8 +273,8 @@
                             <span class="input-group-addon">时间段</span>
                             <input type="text" class="form-control" id="dateInput2"/>
                             <span class="input-group-btn">
-							                <button class="btn btn-primary" type="button">查询</button>
-							            </span>
+                                <button class="btn btn-primary" type="button">查询</button>
+                            </span>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
