--- a/storePing.html
+++ b/storePing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>giant数据|产品评价</title>
+    <title>giant数据|门店评价</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/daterangepicker.css"/>
     <link rel="stylesheet" href="css/zTreeStyle.css">
@@ -31,11 +31,8 @@
             var dateOption = {
                 //最大时间
                 maxDate: moment().subtract(1, 'days'),
-                startDate: moment().subtract(90, 'days'),
+                startDate: moment().subtract(30, 'days'),
                 endDate: moment().subtract(1, 'days'),
-                dateLimit:{
-                    month:"3"
-                },
                 locale: {
                     format: 'YYYY/MM/DD'
                 },
@@ -46,14 +43,17 @@
                 }
             };
             //时间选择
-            $('#dateInput1').daterangepicker(dateOption);
+            $('#dateInput1').daterangepicker($.extend({},dateOption,{dateLimit:{month:"3"}}));
             $('#dateInput2').daterangepicker(dateOption);
         })
     </script>
     <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body class="vip-change">
-<div class="loading-wrapper" style="display: block;">
+<div class="loading-wrapper" id="loading1" style="display: block;">
+    <div class="spinner"></div>
+</div>
+<div class="loading-wrapper" id="loading2" style="display: block;">
     <div class="spinner"></div>
 </div>
 <!--头部 开始-->
@@ -236,8 +236,8 @@
                         <div class="col-md-4 col-sm-4">
                             <div class="btn-group" id="dateClass">
                                 <div class="btn btn-primary">日</div>
+                                <div class="btn btn-default">周</div>
                                 <div class="btn btn-default">月</div>
-                                <div class="btn btn-default">年</div>
                             </div>
                         </div>
                     </div>
@@ -287,13 +287,13 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-8">
                         <div class="btn-group">
-                            <button class="btn btn-primary" id="search-btn4">SBU</button>
+                            <button class="btn btn-default btn-primary" id="search-btn4">SBU</button>
                             <button class="btn btn-default" id="search-btn5">经销商</button>
                             <button class="btn btn-default" id="search-btn6">门店</button>
                         </div>
                     </div>
                     <div class="col-md-1 col-sm-1 col-xs-4 sm-marginTop">
-                        <div class="btn btn-success">下载表格</div>
+                        <div class="btn btn-success" id="download">下载表格</div>
                     </div>
                 </div>
                 <div class="table-responsive lx-container">
